# subit-luca

./: .gitignore  LICENSE  Makefile.mk  README.md  pyproject.toml  requirements.txt  test_encoder.py
datasets/: __init__.py  bacteria.py  human.py
docs/: spec.md
dynamics/: __init__.py
encoder/: __init__.py  universal.py
experiments/: 01_luca_projection.py  02_cross_species.py  __init__.py
levels/: __init__.py  base.py  level0_luca.py
metrics/: __init__.py  complexity.py  entropy.py  luca.py
notebooks/: 01_pbmc_demo.ipynb
phylogeny/: __init__.py
subit/: __init__.py  encoding.py  space.py  state.py
tests/: test_bacteria_encoder.py  test_human_encoder.py  test_levels.py  test_state.py
