[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subit-luca"
version = "0.1.0-alpha"
description = "64‑state universal coordinate system for cellular life – from LUCA to eukaryotes"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.21.0",
    "scipy >= 1.7.0",
    "scanpy >= 1.9.0",      # for single‑cell data handling
    "pandas >= 1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
viz = [
    "matplotlib >= 3.5",
    "seaborn >= 0.11",
    "plotly >= 5.0",
    "ipywidgets",
]
notebooks = [
    "jupyter",
    "nbconvert",
]
all = [
    "subit-luca[dev,viz,notebooks]",
]

[project.urls]
Homepage = "https://github.com/yourname/subit-luca"
Repository = "https://github.com/yourname/subit-luca.git"
Documentation = "https://github.com/yourname/subit-luca#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["subit*", "levels*", "encoder*", "metrics*", "dynamics*", "phylogeny*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --cov=subit --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]   # line length handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true